buildscript {
    repositories {
        maven { url "http://repo.spring.io/plugins-release/" }
    }
    dependencies {
        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.4"
        classpath 'org.github.ngbinh.scalastyle:gradle-scalastyle-plugin_2.11:1.0.1'
        classpath 'io.github.gradle-clojure:gradle-clojure-plugin:0.4.0'
    }
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        maven { url "http://repo.spring.io/plugins-release/" }
    }
    test {
        testLogging {
            events "passed", "skipped", "failed", "standardOut", "standardError"
        }
        dependsOn 'cleanTest'
    }

}